--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,23 @@
 @import 'tailwindcss';
 
+@layer components{
+    .label {
+        @apply block mb-1 text-gray-500 dark:text-gray-300 font-medium;
+    }
+
+    .input {
+        @apply block w-full p-2 rounded-md shadow-sm border border-gray-300 dark:border-gray-600 text-gray-500 dark:text-gray-400;
+    }
+
+    .input-error{
+        @apply text-sm text-red-500 dark:text-red-400;
+    }
+
+    .btn-primary {
+        @apply bg-indigo-600 hover:bg-indigo-500 text-white font-medium p-2 rounded-md cursor-pointer;
+    }
+}
+
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
 @source '../**/*.blade.php';
