--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -28,6 +28,10 @@
     .btn-normal {
         @apply bg-gray-600 hover:bg-gray-500 text-white font-medium p-2 rounded-md cursor-pointer;
     }
+
+    .btn-outline {
+        @apply p-2 rounded-md border shadow-sm border-gray-300 dark:border-gray-800 hover:border-gray-400 hover:bg-gray-50 dark:hover:border-gray-700 dark:hover:bg-gray-800
+    }
 }
 
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
